crates/tui/src/bottom_pane/chat_composer/snapshots/savfox_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: crates/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"────────────────────────────────────────────"
"❯ Type @ to mention files, / for commands,  "
"                                            "
"                                            "
"                                            "
"                                            "
"────────────────────────────────────────────"
"  Plan mode (shift+tab to cycle)            "
